<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_option"
            android:textSize="@dimen/heading_size"/>

        <Button
            android:id="@+id/btn_name_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:gravity="center"
            android:layout_marginTop="@dimen/button_margin"
            />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_margin="18dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_gender"
                android:textSize="@dimen/heading_size"
                android:layout_marginTop="18dp"/>


            <Button
                android:id="@+id/btn_male_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:gravity="center"
                android:layout_margin="@dimen/button_margin"
                />
            <Button
                android:id="@+id/btn_female_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:gravity="center"
                android:layout_margin="@dimen/button_margin"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:gravity="center" />


    </LinearLayout>

</RelativeLayout>