<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_title"
            android:textSize="@dimen/heading_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="@dimen/header_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_name"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <EditText
                    android:id="@+id/et_firstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/first_name"
                    android:layout_margin="@dimen/editText_margin"
                    />
                <EditText
                    android:id="@+id/et_lastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/last_name"
                    android:layout_margin="@dimen/editText_margin"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_email"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_email"
                android:layout_margin="@dimen/editText_margin"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_phone"/>

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/enter_phone"
                android:layout_margin="@dimen/editText_margin"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"/>

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Spinner
                    android:id="@+id/spin_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />

                <Spinner
                    android:id="@+id/spin_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />
                <Spinner
                    android:id="@+id/spin_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:layout_margin="@dimen/button_margin"
                    android:id="@+id/btn_submit"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/submit"/>

                <Button
                    android:layout_margin="@dimen/button_margin"
                    android:id="@+id/btn_autoFill"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/auto_fill"/>
            </LinearLayout>

        </LinearLayout>



    </LinearLayout>

</ScrollView>